--- a/rtr-management.conf
+++ b/rtr-management.conf
@@ -22,9 +22,18 @@ do write
 vlan 999
 name MGMT
 
+vrf definition MGMT
+ address-family ipv4
+
 int vlan 999
+  vrf forwarding MGMT
   ip add 10.99.99.1x 255.255.255.0
-  
+
+int e2/2
+ sw mode acc
+ sw acc vlan 999
+
+ 
 ## ROUTER INTERFACE CONFIGURATION 
 
 vrf definition MGMT
